tests/reject/assignmentByCallType.emojic
🏁 🍇
  0 ➡️ 🖍🆕a

  a ⬅️▶️ 1
🍉
